# open-teleop

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runtime  LICENSE  Makefile  README.md
config/: controller_config.yaml  controller_config_development.yaml  controller_config_production.yaml  controller_config_testing.yaml  gateway_config_sample.yaml  open_teleop_config.yaml  test_av_config.yaml
config/examples/: turtlebot4_teleop_config.yaml
controller/: Dockerfile  README.md  go.mod  go.sum
controller/cmd/controller/: main.go
controller/domain/diagnostic/: system_diagnostic_service.go
controller/domain/system_diagnostic/: system_diagnostic_service.go
controller/domain/teleop/: teleop_service.go
controller/domain/video/: video_service.go
controller/pkg/api/: config_handlers.go  doc.go  types.go  websocket_handlers.go
controller/pkg/config/: bootstrap.go  config.go  config_test.go
controller/pkg/flatbuffers/open_teleop/diagnostic/: LoadAverage.go  Memory.go  NodeStatus.go  Swap.go  SystemMetrics.go
controller/pkg/log/: logger.go  logrus.go
controller/pkg/processing/: director.go  handler.go  message_director.go  pool.go  processor.go  registry.go  ros_processor.go
controller/pkg/rosparser/: README.md  processor.go  rosparser.go
controller/pkg/rosparser/cpp/: CMakeLists.txt  package.xml  ros_parser.cpp  ros_parser.h
controller/pkg/zeromq/: director.go  handlers.go  metrics_listener.go  publisher.go  service.go
controller/pkg/zeromq/test/: req_client_test.go
controller/services/: config_service.go
controller/web/static/: index.html  script.js
controller/web/static/css/: config.css  dashboard.css  main.css  tabs.css  teleop.css
controller/web/static/js/: api.js  main.js
controller/web/static/js/ui/: config.js  dashboard.js  tabs.js  teleop.js  video-simpler.js  video.js
controller/web/svelte/: package-lock.json  package.json  svelte.config.js  vite.config.js
controller/web/svelte/src/: app.html
controller/web/svelte/src/lib/api/: websocket.ts
controller/web/svelte/src/lib/stores/: cards.ts  config.ts  (+2 more)
controller/web/svelte/src/routes/: +layout.svelte  +page.svelte
docs/: ONBOARDING.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  ROS_GATEWAY_PLAN.md  architecture.md  architecture_summary.md  connection-manager.md  development_guide.md  dynamic-config.md  media-server-design.md  system-requirements.md  video_streaming_plan.md  webui_config_editor_prototype.md
docs/mini-webui/: mini-web-ui-implementation-plan.md  mini-web-ui-progress.md  mini-web-ui-requirements.md  toolbar-component-discovery-analysis.md
infra/: docker-compose.yml
infra/simulator/: README.md  turtlebot4.sh
media-gateway/: README.md  pyproject.toml  requirements.txt  setup.py
media-gateway/config/: media-gateway-config.yaml
media-gateway/media_gateway/: __init__.py  __main__.py  main.py
media-gateway/media_gateway/config/: __init__.py  internal_config.py  manager.py  models.py
media-gateway/media_gateway/core/: config_manager.py
media-gateway/media_gateway/devices/: __init__.py  manager.py  models.py
media-gateway/media_gateway/pipelines/: __init__.py  manager.py
media-gateway/media_gateway/routing/: __init__.py  frame_router.py
media-gateway/media_gateway/transport/: __init__.py  connection_manager.py
media-gateway/media_gateway/zeromq_client/: __init__.py  zmq_client.py
media-gateway/tests/: __init__.py  test_config.py
pkg/api/: websocket_handlers.go
ros2_ws/: Dockerfile  README.md
ros2_ws/launch/: all_bridges.launch.py
ros2_ws/src/bridge_nodes/open_teleop_logger/: package.xml  setup.py
ros2_ws/src/bridge_nodes/system_diagnostic/: package.xml  setup.cfg  setup.py
ros2_ws/src/bridge_nodes/system_diagnostic/launch/: system_diagnostics.launch.py
ros2_ws/src/bridge_nodes/system_diagnostic/system_diagnostic/: __init__.py  system_diagnostics_node.py
ros2_ws/src/open_teleop_av_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/open_teleop_av_node/launch/: av_node.launch.py
ros2_ws/src/open_teleop_av_node/open_teleop_av_node/: __init__.py  av_node.py
ros2_ws/src/open_teleop_logger/: setup.cfg
ros2_ws/src/open_teleop_logger/open_teleop_logger/: __init__.py  logger.py
ros2_ws/src/open_teleop_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/open_teleop_msgs/msg/: EncodedFrame.msg  StreamStatus.msg
ros2_ws/src/open_teleop_msgs/srv/: GetStatus.srv  ManageStream.srv
ros2_ws/src/ros_gateway/: README.md  package.xml  setup.py
ros2_ws/src/ros_gateway/config/: cyclonedds.xml  gateway_config.yaml
ros2_ws/src/ros_gateway/launch/: gateway.launch.py  gateway_direct.launch.py  launch_gateway.py
ros2_ws/src/ros_gateway/launch/common/: base_gateway.py
ros2_ws/src/ros_gateway/launch/development/: gateway_launch.py
ros2_ws/src/ros_gateway/launch/production/: gateway_launch.py
ros2_ws/src/ros_gateway/launch/testing/: gateway_launch.py
ros2_ws/src/ros_gateway/ros_gateway/: __init__.py  gateway_node.py
ros2_ws/src/ros_gateway/ros_gateway/av_integration/: __init__.py  encoded_frame_subscriber.py
ros2_ws/src/ros_gateway/ros_gateway/config_processor/: __init__.py  config_loader.py
ros2_ws/src/ros_gateway/ros_gateway/message_converter/: __init__.py  converter.py
ros2_ws/src/ros_gateway/ros_gateway/topic_publisher/: __init__.py  publisher.py
ros2_ws/src/ros_gateway/ros_gateway/topic_subscriber/: __init__.py  topic_manager.py
ros2_ws/src/ros_gateway/ros_gateway/zeromq_client/: __init__.py  zmq_client.py
ros2_ws/src/ros_gateway/test/: test_config_processor.py  test_config_with_mocks.py
schemas/: README.md  diagnostics.fbs  ott_message.fbs
scripts/: build.sh  build_media_gateway.sh  build_runtime.sh  dev_env.sh  dev_setup.sh  entrypoint.sh  generate_interfaces.sh  run_av_node.sh  run_controller.sh  run_gateway.sh  run_media_gateway.sh  run_tests.sh  test_config_exchange.sh
tests/: test_av_service.py  view_encoded_stream.py
tests/integration/: run_integration_tests.sh
tests/ros2-scripts/: README.md  image_viewer.py  pub.py  sub.py  test_gateway_inbound.sh  test_gateway_outbound.sh  webcam_pub.py
(+18 files in other folders)
