<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_teleop_av_node</name>
  <version>0.1.0</version>
  <description>ROS 2 Node for capturing, encoding, and publishing A/V streams for Open Teleop</description>
  <maintainer email="maintainer@example.com">Open Teleop Maintainer</maintainer>
  <license>Apache-2.0</license> <!-- Or your chosen license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend> <!-- For input Image/CompressedImage -->
  <!-- <depend>open_teleop_msgs</depend> --> <!-- Will be added once created -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 