<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_teleop_msgs</name>
  <version>0.1.0</version>
  <description>Message and service definitions for the Open Teleop platform</description>
  <maintainer email="maintainer@example.com">Open Teleop Maintainer</maintainer>
  <license>Apache-2.0</license> <!-- Or your chosen license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Required for message/service generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Need std_msgs for Header -->
  <depend>std_msgs</depend>
  <!-- Could potentially need builtin_interfaces for Time later -->
  <!-- <depend>builtin_interfaces</depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 