<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gateway</name>
  <version>0.1.0</version>
  <description>
    ROS Gateway for Open-Teleop - A bridge between ROS2 and the Open-Teleop Controller
  </description>
  <maintainer email="maintainer@example.com">Open-Teleop Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>python3-zmq</build_depend>
  <build_depend>python3-flatbuffers</build_depend>
  
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-zmq</exec_depend>
  <exec_depend>python3-flatbuffers</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 