<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosparser</name>
  <version>0.1.0</version>
  <description>ROS message parser for Open-Teleop</description>
  <maintainer email="maintainer@open-teleop.org">Open Teleop Maintainer</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_runtime_c</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
